<resources>
    <string name="app_name">玩安卓</string>
    <string name="app_name_en">WanAndroid</string>
    <string name="title_wan_home">玩安卓</string>
    <string name="title_wan_search">搜索</string>
    <string name="title_wan_project">开源项目</string>
    <string name="title_mine">关于作者</string>
    <string name="home">首页</string>
    <string name="square">广场</string>
    <string name="share">分享</string>
    <string name="no_name">佚名</string>
    <string name="share_success">分享成功！</string>
    <string name="share_notice">分享须知</string>
    <string name="wx_article">公众号</string>
    <string name="source_code">源代码地址</string>
    <string name="libraries">第三方库</string>
    <string name="my_blog">个人主页</string>
    <string name="open_source_license">开源协议</string>
    <string name="system">体系</string>
    <string name="navigation">导航</string>
    <string name="collection">收藏</string>
    <string name="is_loading">正在加载</string>
    <string name="input_search_key_words">请输入搜索关键字</string>
    <string name="no_search_resut">没有搜到东西哦~</string>
    <string name="hang_out">随便看看</string>
    <string name="contact_me">联系作者</string>
    <string name="wan_en">wan</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="input_keyword">请输入密码</string>
    <string name="input_share_title">请输入文章标题</string>
    <string name="input_share_link">请输入文章链接</string>
    <string name="cancel">取消</string>
    <string name="log_in">登录</string>
    <string name="input_correct_info">请输入正确的用户名和密码</string>
    <string name="log_in_success">登录成功！</string>
    <string name="my_collection">我的收藏</string>
    <string name="log_out">登出</string>
    <string name="confirm_log_out">确定要退出登录吗？</string>
    <string name="confirm">确定</string>
    <string name="about">关于</string>
    <string name="nobody">佚名</string>
    <string name="repress_to_back">再按一次退出程序</string>
    <string name="share_information_1">只要是任何好文都可以分享哈，并不一定要是原创！投递的文章会进入广场 tab;</string>
    <string name="share_information_2">CSDN，掘金，简书等官方博客站点会直接通过，不需要审核;</string>
    <string name="share_information_3">其他个人站点会进入审核阶段，不要投递任何无效链接，测试的请尽快删除，否则可能会对你的账号产生一定影响;</string>
    <string name="share_information_4">目前处于测试阶段，如果你发现500等错误，可以向我提交日志，让我们一起使网站变得更好。</string>
    <string name="share_information_5">由于本站只有我一个人开发与维护，会尽力保证24小时内审核，当然有可能哪天太累，会延期，请保持佛系…</string>
</resources>
