<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingStart="@dimen/space_20"
    android:paddingTop="@dimen/space_20">

    <TextView
        android:id="@+id/text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/open_source_license"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:gravity="center_horizontal"
        android:text="@string/source_code"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:id="@+id/text_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:gravity="center_horizontal"
        android:text="@string/libraries"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:id="@+id/text_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:gravity="center_horizontal"
        android:text="@string/my_blog"
        android:textSize="@dimen/text_size_18" />

    <TextView
        android:id="@+id/text_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:gravity="center_horizontal"
        android:text="@string/contact_me"
        android:textSize="@dimen/text_size_18" />
</LinearLayout>