<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginEnd="@dimen/space_10"
                android:src="@drawable/login_btn_back_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/open_source_license"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20"
            android:gravity="center_horizontal"
            android:text="@string/source_code"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20"
            android:gravity="center_horizontal"
            android:text="@string/libraries"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/text_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20"
            android:gravity="center_horizontal"
            android:text="@string/my_blog"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/text_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20"
            android:gravity="center_horizontal"
            android:text="@string/contact_me"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>
</FrameLayout>