<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/share_notice"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="6dp"
            android:paddingStart="10dp"
            android:text="1、"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingRight="10dp"
            android:text="@string/share_information_1"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingStart="10dp"
            android:text="2、"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tvInformation2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingRight="10dp"
            android:text="@string/share_information_2"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingStart="10dp"
            android:text="3、"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tvInformation3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingRight="10dp"
            android:text="@string/share_information_3"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingStart="10dp"
            android:text="4、"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingRight="10dp"
            android:text="@string/share_information_4"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingLeft="10dp"
            android:text="5、"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:paddingRight="10dp"
            android:text="@string/share_information_5"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>
</LinearLayout>
